package ingsoftware.service.strategy;

import ingsoftware.model.Equipment;
import ingsoftware.model.UserEquipment;
import ingsoftware.model.enum_helpers.EquipmentType;
import ingsoftware.model.User;
import ingsoftware.service.EquipmentService;

import java.util.List;
import java.util.Map;

public class EquipmentBoostedStrategy implements GamificationStrategy {
    private final GamificationStrategy baseStrategy;
    private final EquipmentService equipmentService;

    public EquipmentBoostedStrategy(GamificationStrategy baseStrategy, EquipmentService equipmentService) {
        this.baseStrategy = baseStrategy;
        this.equipmentService = equipmentService;
    }


    @Override
    public double calculateExperience(double baseExperience, User user) {
        double baseResult = baseStrategy.calculateExperience(baseExperience, user);

        List<Equipment> activeEquipments = equipmentService.getFullEquipmentSet(user.getId());
        if (activeEquipments == null || activeEquipments.isEmpty()) {
            return baseResult;
        }

        double totalMultiplier = 1.0;
        for (Equipment equipment : activeEquipments) {
            totalMultiplier *= equipment.getExperienceMultiplier();
        }

        return (baseResult * totalMultiplier);
    }
}
